azdo-hello-world/traffic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azdo-hw-ingress
  namespace: azdo-k8s-hw-stg
spec:
  ingressClassName: nginx
  rules:
    - host: staging-azdo-k8s-hw01.staging-tej.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: azdo-helloworld
                port:
                  number: 80
            path: /helloWorld
